--- a/app/views/public/pages/la_boutique.html.erb
+++ b/app/views/public/pages/la_boutique.html.erb
@@ -1,28 +1,42 @@
 <%= page_header("La boutique de Cannes", "Découvrez notre équipe et notre boutique") %>
 
 <div class="public-main-content">
-
     <div class="container-fluid">
 
-        <div class="row m-4 p-4">
-            <div class="col-12 col-md-6 text-center p-2" data-aos="fade">
-                <%= image_tag("equipe1.jpg", class: "img-fluid rounded") %>
-            </div>
-            <div class="col-12 col-md-6 text-center p-2" data-aos="fade">
-                <%= image_tag("equipe2.jpg", class: "img-fluid rounded") %>
-            </div>
+        <!-- Section Boutique -->
+        <div class="text-center m-4 p-4" data-aos="fade">
+            <div class="trix-content"><%= @texteBoutique %></div>
         </div>
 
+        <!-- Section Équipe -->
+        <% if @texteEquipe.present? %>
+          <div class="m-4 p-4" data-aos="fade">
+              <h3 class="text-center brand-colored mb-4">Notre équipe</h3>
+              <div class="row align-items-center g-4">
+                  <div class="col-12 col-md-6" data-aos="fade-right">
+                      <%= image_tag("equipe1.jpg", class: "img-fluid rounded shadow") %>
+                  </div>
+                  <div class="col-12 col-md-6" data-aos="fade-left">
+                      <div class="trix-content"><%= @texteEquipe %></div>
+                  </div>
+              </div>
+          </div>
+        <% end %>
+        
+        <!-- Informations pratiques -->
         <%= render "infos" %>
-
-        <div class="text-center m-4 p-4" data-aos="fade">
-            <%= @texteBoutique %>
+     
+        <!-- Bouton Rendez-vous -->
+        <div class="text-center my-5" data-aos="fade">
+            <%= link_to rdv_url(subdomain: "shop"), class: "btn btn-lg px-5 py-3 shadow" do %>
+              <i class="bi bi-calendar-check me-2"></i>
+              <span class="fw-bold">Prendre Rendez-vous</span>
+            <% end %>
         </div>
 
         <%#= render "map" %>
 
     </div>
-
 </div>
 
 
