--- a/app/views/public/pages/nos_autres_activites.html.erb
+++ b/app/views/public/pages/nos_autres_activites.html.erb
@@ -3,7 +3,7 @@
 <div class="public-main-content">
   <div class="container-fluid">
     <div class="text-center m-4 p-4" data-aos="fade">
-      <p>Contenu à venir...</p>
+      <p> Costumes d'époque/ Prestations aux entreprises et groupes...</p>
     </div>
   </div>
 </div>
