--- a/app/views/admin/textes/index.html.erb
+++ b/app/views/admin/textes/index.html.erb
@@ -1,15 +1,27 @@
+<div class="container-fluid py-4">
+  <div class="d-flex justify-content-between align-items-center mb-4">
+    <div>
+      <h1 class="mb-2">Textes</h1>
+      <p class="text-muted">Définissez les textes de la boutique</p>
+    </div>
+    <% unless @textes.any? %>
+      <%= link_to "Nouveau texte", new_admin_texte_path, class: "btn btn-primary" %>
+    <% end %>
+  </div>
 
-<h1>Textes</h1>
-
-<div id="textes">
-  <% @textes.each do |texte| %>
-    <%= render texte %>
-    <p>
-      <%= button_to("", edit_admin_texte_path(texte), method: :post, class: "btn btn-sm btn-secondary bi bi-pencil-square me-1 p-2") %>
-    </p>
-  <% end %>
+  <div id="textes">
+    <% @textes.each do |texte| %>
+      <div class="card mb-4 shadow-sm">
+        <div class="card-body">
+          <%= render texte %>
+        </div>
+        <div class="card-footer bg-white border-top">
+          <%= button_to edit_admin_texte_path(texte), method: :post, class: "btn btn-sm btn-outline-secondary" do %>
+            <i class="bi bi-pencil-square me-1"></i>
+            Modifier
+          <% end %>
+        </div>
+      </div>
+    <% end %>
+  </div>
 </div>
-
-<% unless @textes.any? %>
-  <%= link_to "New texte", new_admin_texte_path %>
-<% end %>
